--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -18,6 +18,9 @@
                         <a class="nav-link inicioReload" href="/#/dashboard" (click)="inicio()">Inicio</a>
                     </li>
                     <li class="nav-item" routerLinkActive="active">
+                        <a class="nav-link" [routerLink]="['/informes']">Informes</a>
+                    </li>
+                    <li class="nav-item" routerLinkActive="active">
                         <a class="nav-link" [routerLink]="['/newImage']">Subir imagen</a>
                     </li>
                     <li class="nav-item">
