--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -51,9 +51,26 @@
     <!-- /#sidebar-wrapper -->
 
     <!-- Page Content -->
-    <div id="page-content-wrapper">
         <div class="container-fluid container-home mt-5">
-            <h1>hola</h1>
+            <div class="">
+
+            </div>
+            <div class="card-container">
+                <div class="column">
+                    <div class="card">card1</div>
+                </div>
+                <div class="column">
+                    <div class="card">card2</div>
+                </div>
+                <div class="column">
+                    <div class="card">card3</div>
+                </div>
+                <div class="column">
+                    <div class="card">card4</div>
+                </div>
+                <div class="column">
+                    <div class="card">card5</div>
+                </div>
+            </div>
         </div>
-    </div>
 </div>
