se crean las cards, con sus logos

--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -57,19 +57,36 @@
             </div>
             <div class="card-container">
                 <div class="column">
-                    <div class="card">card1</div>
+                    <div class="card">
+                        <img src="../../../assets/money.png" class="Capa_1" alt="money">
+                        <!--todo hacer dinamico el precio y el porcentaje -->
+                        <p class="card-p">Precio</p>
+                        <p class="">promedio</p>  
+                        <p>$ 250.000</p>
+                        <p>+ 0,39%</p>
+                        <p>Que el mes pasado</p>
+                    </div>
                 </div>
                 <div class="column">
-                    <div class="card">card2</div>
+                    <div class="card">
+                        <img src="../../../assets/discount.png" class="Capa_1" alt="discount">
+
+                    </div>
                 </div>
                 <div class="column">
-                    <div class="card">card3</div>
+                    <div class="card">
+                        <img src="../../../assets/new.png" class="Capa_1" alt="discount">
+                    </div>
                 </div>
                 <div class="column">
-                    <div class="card">card4</div>
+                    <div class="card">
+                        <img src="../../../assets/remove.png" class="Capa_1" alt="remove">
+                    </div>
                 </div>
                 <div class="column">
-                    <div class="card">card5</div>
+                    <div class="card">
+                        <img src="../../../assets/sku.png" class="Capa_1" alt="sku">
+                    </div>
                 </div>
             </div>
         </div>
