--- a/src/app/components/informes/informes.component.css
+++ b/src/app/components/informes/informes.component.css
@@ -119,6 +119,23 @@
   padding: 16px;
   text-align: center;
   background-color: #f1f1f1;
+  margin: 0 auto;
+  height: 15rem;
+}
+
+.Capa_1 {
+  margin-left: 40%;
+  width: 32px;
+  margin-bottom: 1rem;
+}
+
+.card-p {
+  text-align: center;
+  margin-bottom: 0;
+}
+
+.card-precio {
+  font-size: 1rem;
 }
 
 .card-container {
