--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -70,24 +70,42 @@
                 <div class="column">
                     <div class="card">
                         <img src="../../../assets/discount.png" class="Capa_1" alt="discount">
-
+                        <p class="card-p">Descuento</p>
+                        <p class="">promedio</p>  
+                        <p> 100 %</p>
+                        <p>- 0,55%</p>
+                        <p>Que el mes pasado</p>
                     </div>
                 </div>
                 <div class="column">
                     <div class="card">
-                        <img src="../../../assets/new.png" class="Capa_1" alt="discount">
+                        <img src="../../../assets/new.png" class="Capa_1" alt="new">
+                        <p class="">Recien llegados</p> 
+                        <p>15.000</p>
+                        <p>- 0,5%</p>
+                        <p>Que el mes pasado</p>
                     </div>
                 </div>
                 <div class="column">
                     <div class="card">
                         <img src="../../../assets/remove.png" class="Capa_1" alt="remove">
+                        <p class="">Descontinuados</p> 
+                        <p>15.000</p>
+                        <p>10,55%</p>
+                        <p>Que el mes pasado</p>
                     </div>
                 </div>
                 <div class="column">
                     <div class="card">
                         <img src="../../../assets/sku.png" class="Capa_1" alt="sku">
+                        <p class="">Total</p>
+                        <p class="">SKU</p>  
+                        <p>$ 250.000</p>
+                        <p>+ 0,39%</p>
+                        <p>Que el mes pasado</p>
                     </div>
                 </div>
+
             </div>
         </div>
 </div>
