--- a/src/app/components/informes/informes.component.css
+++ b/src/app/components/informes/informes.component.css
@@ -36,7 +36,7 @@
 }
 
 .sel2:hover {
-  color: rgba(230, 97, 57, 0.987)
+  color: rgba(230, 97, 57, 0.987);
 }
 
 .imgsel {
@@ -92,10 +92,50 @@
   margin-left: 10px;
   color: rgba(255, 255, 255, 0.8);
 }
+
+/* Tabla */
+.table-container {
+  width: 100%;
+  max-width: 700px;
+  margin: auto;
+}
+
+table {
+  width: 100%;
+  background-color: white;
+  border-collapse: collapse;
+  text-align: left;
+  margin: 0;
+  padding: 0;
+  table-layout: fixed;
+}
+
+th, td{
+  padding: 7px;
+}
+
+thead{
+  background-color: #cecece;
+  border-bottom: solid 1px #919090;
+  color: #000000;
+}
+
+tr:nth-child(even){
+  background-color: #ddd;
+}
+
+tr:hover td{
+  background-color: rgba(230, 97, 57, 0.987);
+  color: white;
+}
+
+.dif {
+  color: green;
+}
 /* Fin CSS Acevedo */
 
 
-  /*  ccs Juan Pablo  */
+/*  ccs Juan Pablo  */
 /* Float four columns side by side */
 .column {
   float: left;
@@ -147,15 +187,41 @@
   background-color: antiquewhite;
 }
 
-/* Responsive columns - one column layout (vertical) on small screens */
+/* Responsive columns and tables - one column layout (vertical) on small screens */
 @media screen and (max-width: 600px) {
   .column {
     width: 100%;
     display: block;
     margin-bottom: 20px;
   }
+
+  table {
+    border: 0px;
+  }
+
+  thead {
+    display: none;
+  }
+
+  tr {
+    margin-bottom: 8px;
+    display: block;
+  }
+
+  td {
+    text-align: right;
+    display: block;
+  }
+
+  td:last-child {
+    border-bottom: 0px;
+  }
+
+  td::before {
+    content: attr(data-label);
+    font-weight: bold;
+    float: left;
+  }
 }
-
-
-  /* fin ccs Juan Pablo  */
+/* fin ccs Juan Pablo  */
   
