--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -52,9 +52,24 @@
 
     <!-- Page Content -->
         <div class="container-fluid container-home mt-5">
-            <div class="">
+            <div class="grid">
 
+                <div class="titulo-grid1">
+                    <h1 class="">{{titulo}}</h1>
+                </div>
+
+                <div class="ul-grid1">
+                    <ul>
+                        <li>Hola</li>
+                    </ul>
+                </div>
+
+                <div class="input-grid1">
+                    <input type="date"/>
+                </div>
+                    
             </div>
+
             <div class="card-container">
                 <div class="column">
                     <div class="card">
