--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -53,26 +53,33 @@
     <!-- /#sidebar-wrapper -->
 
     <!-- Page Content -->
-        <div class="container-fluid container-home mt-5">
+        <div class="container-cards mt-3">
             <div class="grid">
 
                 <div class="titulo-grid1">
-                    <h1 class="">{{titulo}}</h1>
+                    <h1 class="titulo-h1">{{titulo}}</h1>
                 </div>
 
-                <div class="ul-grid1">
-                    <ul>
-                        <li>Hola</li>
+                <div id="header" class="ul-grid1">
+                    <ul class="nav">
+                        <li>Mes
+                            <ul>
+                                <li>año</li>
+                                <li>Mes</li>
+                            </ul>
+                        </li>
+                        
                     </ul>
                 </div>
 
                 <div class="input-grid1">
-                    <input type="date"/>
+                    <input id="date1" type="date"/>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" heigth="16" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0" viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill: rgb(255, 87, 87);" role="img" aria-label="Illustration of a Funnel"><g id="__id33_ssutzzo1g"><path d="m350 144.09h180v20l-70 90v100l-40-20v-80l-70-90v-20" transform="translate(-350 -144.09)" style="fill: inherit;"></path></g></svg>
                 </div>
                     
             </div>
-            
-    <div class="container-fluid container-home mt-5">
+
+    <div class="container-cards">
         <div class="">
 
         </div>
