--- a/src/app/components/informes/informes.component.css
+++ b/src/app/components/informes/informes.component.css
@@ -212,8 +212,6 @@ ul.nav {
   list-style: none;
   background-color: #f1f1f1;
   border-radius: 7%;
-  padding-bottom: 0.5rem;
-  padding-left: 0.4rem;
 }
 
 ul.nav:hover {
@@ -225,14 +223,34 @@ ul.nav:hover {
   color: #0a0a0a;
   text-decoration: none;
   display: block;
+  width: 100%;
 }
 
 .nav > li {
+  float: left;
+  padding-bottom: 8px;
+}
+
+.nav li ul li {
   float: left;
 }
 
 .nav li ul {
   display: none;
+  position: absolute;
+  min-width: 135px;
+  z-index: 3;
+  background-color: #f1f1f1;
+  margin-top: 8px;
+  padding-right: 5px;
+}
+
+.nav li:hover {
+  background-color: #868686;
+}
+
+.nav li:hover > ul{
+  display: block;
 }
 
 @media screen and (max-width: 600px) {
