--- a/src/app/components/informes/informes.component.css
+++ b/src/app/components/informes/informes.component.css
@@ -315,5 +315,33 @@ ul.nav:hover {
     float: left;
   }
 }
+
+/* inicio estilos chart */
+.chart-container {
+  width: 100%;
+}
+
+
+
+/* fin estilos chart */
+
+
 /* fin ccs Juan Pablo  */
+
+
+/* media querys */
+
+@media (max-width: 947px) {
+  .card {
+    height: auto;
+  }
+}
+
+@media (min-width: 750px) and (max-width: 947px){
+  .chart-line {
+    width: auto;
+  }
+}
+
+/* fin media querys */
   
