--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -177,8 +177,11 @@
 
     <!-- charts -->
         <div class="chart-container">
+            <div class="titulo-chart">
+                <h2>Precio promedio marcas</h2>
+            </div>
             <div class="chart-line">
-                <canvas id="myChart" #mychart></canvas>
+                <canvas id="myChart" width="200px" height="100px" #mychart></canvas>
              </div>
         </div>
 
