--- a/src/app/components/image-detail/image-detail.component.html
+++ b/src/app/components/image-detail/image-detail.component.html
@@ -51,7 +51,7 @@
                                     </h4>
                                     <ul class="collapse list-unstyled" id="prendaInfo">
                                         <li>
-                                            <p class="card-text"> <span class="label-bold">Categoría: </span> 
+                                            <p class="card-text"> <span class="label-bold">tipo de prenda: </span> 
                                                 {{photo.categoria}}
                                             </p>
                                             <p class="card-text"> <span class="label-bold">Nombre: </span>
@@ -60,7 +60,7 @@
                                             <p class="card-text"> <span class="label-bold">Precio: </span>
                                                 {{photo.precio}} 
                                             </p>
-                                            <p class="card-text"> <span class="label-bold">Descuento: </span>
+                                            <p class="card-text"> <span class="label-bold">Precio final promocion: </span>
                                                 {{photo.descuento}} 
                                             </p> 
                                             <p class="card-text"> <span class="label-bold">Características: </span>
