--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -521,7 +521,7 @@
             <th>SKU</th>
             <th>Precio promedio</th>
             <th>Nueva llegada</th>
-            <th>Tasa de factura</th>
+            <th>Tasa de frescura</th>
             <th>Descuento promedio</th>
           </tr>
         </thead>
@@ -534,7 +534,7 @@
             <td data-label="SKU">124m</td>
             <td data-label="Precio promedio">$55.50</td>
             <td data-label="Nueva llegada">El 14.97m</td>
-            <td data-label="Tasa de fescura">12.07%</td>
+            <td data-label="Tasa de frescura">12.07%</td>
             <td data-label="Descuento promedio" style="color: green;">88,69%</td>
           </tr>
           <tr>
@@ -544,7 +544,7 @@
             <td data-label="SKU">Los 30.61m</td>
             <td data-label="Precio promedio">$82.00</td>
             <td data-label="Nueva llegada">Los 4.27m</td>
-            <td data-label="Tasa de fescura">13.97%</td>
+            <td data-label="Tasa de frescura">13.97%</td>
             <td data-label="Descuento promedio" style="color: green;">88,69%</td>
           </tr>
           <tr>
@@ -554,13 +554,127 @@
             <td data-label="SKU">El 14.51m</td>
             <td data-label="Precio promedio">$35.50</td>
             <td data-label="Nueva llegada">1.98m</td>
-            <td data-label="Tasa de fescura">13.70%</td>
+            <td data-label="Tasa de frescura">13.70%</td>
             <td data-label="Descuento promedio" style="color: green;">88,69%</td>
           </tr>
         </tbody>
       </table>
     </div>
     <!-- Fin tabla SKU -->         
+
+    <br>
+    <br>
+    <br>
+
+    <!-- tabla tipo de prenda -->
+    <div class="table-container-tipoP">
+      <h2>Tipo de prenda</h2>
+      <table class="tipoP">
+        <thead>
+          <tr>
+            <th>Categoría</th>
+            <th>Subcategoría</th>
+            <th>Tipo de prenda</th>
+            <th>SKU</th>
+            <th>Precio promedio</th>
+            <th>Nueva llegada</th>
+            <th>Tasa de frescura</th>
+            <th>Cantidad descuento</th>
+            <th>Descuento promedio</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td data-label="Categoría">Todo</td>
+            <td data-label="Subcategoría">Vestir</td>
+            <td data-label="Tipo de prenda">Todo</td>
+            <td data-label="SKU">124m</td>
+            <td data-label="Precio promedio">$55.50</td>
+            <td data-label="Nueva llegada">El 14.97m</td>
+            <td data-label="Tasa de frescura">12.07%</td>
+            <td data-label="Cantidad descuento">708.72K</td>
+            <td data-label="Descuento promedio" style="color: green;">88,69%</td>
+          </tr>
+          <tr>
+            <td data-label="Categoría">Todo</td>
+            <td data-label="Subcategoría">Calzado</td>
+            <td data-label="Tipo de prenda">Todo</td>
+            <td data-label="SKU">Los 30.61m</td>
+            <td data-label="Precio promedio">$82.00</td>
+            <td data-label="Nueva llegada">Los 4.27m</td>
+            <td data-label="Tasa de frescura">13.97%</td>
+            <td data-label="Cantidad descuento">590.83K</td>
+            <td data-label="Descuento promedio" style="color: green;">88,69%</td>
+          </tr>
+          <tr>
+            <td data-label="Categoría">Todo</td>
+            <td data-label="Subcategoría">Interior</td>
+            <td data-label="Tipo de prenda">Todo</td>
+            <td data-label="SKU">El 14.51m</td>
+            <td data-label="Precio promedio">$35.50</td>
+            <td data-label="Nueva llegada">1.98m</td>
+            <td data-label="Tasa de frescura">13.70%</td>
+            <td data-label="Cantidad descuento">452k</td>
+            <td data-label="Descuento promedio" style="color: green;">88,69%</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <!-- Fin tabla tipo de prenda -->   
+    
+    <br>
+    <br>
+    <br>
+
+    <!-- tabla productos -->
+    <div class="table-container-tipoP">
+      <h2>Productos</h2>
+      <table class="tipoP">
+        <thead>
+          <tr>
+            <th>Producto</th>
+            <th>Tipo de prenda</th>
+            <th>Retail</th>
+            <th>Color</th>
+            <th>Talla</th>
+            <th>Precio</th>
+            <th>Descuento</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td data-label="Producto"><img src="./assets/prenda1.png" alt="" class="prenda1"/></td>
+            <td data-label="Tipo de prenda">Camisa</td>
+            <td data-label="Retail">Zara</td>
+            <td data-label="Color">Blanco</td>
+            <td data-label="Talla">S-M-L</td>
+            <td data-label="Precio">708.72K</td>
+            <td data-label="Descuento">22.92%</td>
+          </tr>
+          <tr>
+            <td data-label="Producto"><img src="./assets/prenda1.png" alt="" class="prenda1"/></td>
+            <td data-label="Tipo de prenda">Camisa</td>
+            <td data-label="Retail">Zara</td>
+            <td data-label="Color">Blanco</td>
+            <td data-label="Talla">S-M-L</td>
+            <td data-label="Precio">708.72K</td>
+            <td data-label="Descuento">22.92%</td>
+          </tr>
+          <tr>
+            <td data-label="Producto"><img src="./assets/prenda1.png" alt="" class="prenda1"/></td>
+            <td data-label="Tipo de prenda">Camisa</td>
+            <td data-label="Retail">Zara</td>
+            <td data-label="Color">Blanco</td>
+            <td data-label="Talla">S-M-L</td>
+            <td data-label="Precio">708.72K</td>
+            <td data-label="Descuento">22.92%</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <!-- Fin tabla productos -->      
   </div>
   <!-- fin page-content -->
 </div>
