se agrega el precio promedio

--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -124,7 +124,7 @@
             <!--todo hacer dinamico el precio y el porcentaje -->
             <p class="card-p">Precio</p>
             <p class="">promedio</p>
-            <p>$ 250.000</p>
+            <p>$ {{averagePrice}}</p>
             <p>+ 0,39%</p>
             <p>Que el mes pasado</p>
           </div>
@@ -182,6 +182,7 @@
             </div>
             <div class="chart-line">
                 <canvas id="myChart" width="200px" height="100px" #mychart></canvas>
+                <canvas id="myChart2" width="200px" height="100px" #mychart></canvas>
              </div>
         </div>
 
