--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -175,396 +175,39 @@
       <!-- fin cards container -->
     </div>
 
-    <!-- charts -->
-        <div class="chart-container">
-            <div class="titulo-chart">
-                <h2>Precio promedio marcas</h2>
-            </div>
-            <div class="chart-line">
-                <canvas id="myChart" width="200px" height="100px" #mychart></canvas>
-                <canvas id="myChart2" width="200px" height="100px" #mychart></canvas>
-             </div>
-        </div>
+    
+    <app-informe-precio></app-informe-precio>
+    <br>
+    <br>
+    <hr>
+    <br>
 
-    <!-- tabla precio promedio -->
-    <div class="table-container">
-      <h2>Categorías con mayor cambio - Precio promedio</h2>
-      <p>Comparación mes a mes</p>
-      <table>
-        <thead>
-          <tr>
-            <th>Categoría</th>
-            <th>Subcategoría</th>
-            <th>Tipo de prenda</th>
-            <th>Precio promedio</th>
-            <th>Diferencia</th>
-          </tr>
-        </thead>
-
-        <tbody>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Ropa</td>
-            <td data-label="Tipo de prenda">Pantalon</td>
-            <td data-label="Precio promedio">$65,772</td>
-            <td data-label="Diferencia" style="color: green;">88,69% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Ropa</td>
-            <td data-label="Tipo de prenda">Vestido</td>
-            <td data-label="Precio promedio">$65,772</td>
-            <td data-label="Diferencia" style="color: green;">66,50% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Ropa</td>
-            <td data-label="Tipo de prenda">Camisa</td>
-            <td data-label="Precio promedio">$65,772</td>
-            <td data-label="Diferencia" style="color: green;">46,94% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Calzado</td>
-            <td data-label="Tipo de prenda">Sandalias</td>
-            <td data-label="Precio promedio">$65,772</td>
-            <td data-label="Diferencia" style="color: green;">67,02% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Calzado</td>
-            <td data-label="Tipo de prenda">Zapatos</td>
-            <td data-label="Precio promedio">$65,772</td>
-            <td data-label="Diferencia" style="color: green;">34,43% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Calzado</td>
-            <td data-label="Tipo de prenda">Tenis</td>
-            <td data-label="Precio promedio">$65,772</td>
-            <td data-label="Diferencia" style="color: green;">34,08% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Accesorios</td>
-            <td data-label="Tipo de prenda">Accesorios</td>
-            <td data-label="Precio promedio">$65,772</td>
-            <td data-label="Diferencia" style="color: green;">132,93% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Ropa</td>
-            <td data-label="Tipo de prenda">Top</td>
-            <td data-label="Precio promedio">$65,772</td>
-            <td data-label="Diferencia" style="color: green;">132,93% ↑</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <!-- Fin tabla precio promedio -->
+    <app-informe-descuento></app-informe-descuento>
 
     <br>
     <br>
+    <hr>
     <br>
 
-    <!-- tabla descuento promedio -->
-    <div class="table-container">
-      <h2>Categorías con mayor cambio - Descuento promedio</h2>
-      <p>Comparación mes a mes</p>
-      <table>
-        <thead>
-          <tr>
-            <th>Categoría</th>
-            <th>Subcategoría</th>
-            <th>Tipo de prenda</th>
-            <th>Promedio descuento</th>
-            <th>Diferencia</th>
-          </tr>
-        </thead>
-
-        <tbody>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Ropa</td>
-            <td data-label="Tipo de prenda">Pantalon</td>
-            <td data-label="Promedio descuento">50%</td>
-            <td data-label="Diferencia" style="color: green;">88,69% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Ropa</td>
-            <td data-label="Tipo de prenda">Vestido</td>
-            <td data-label="Promedio descuento">50%</td>
-            <td data-label="Diferencia" style="color: green;">66,50% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Ropa</td>
-            <td data-label="Tipo de prenda">Camisa</td>
-            <td data-label="Promedio descuento">50%</td>
-            <td data-label="Diferencia" style="color: green;">46,94% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Calzado</td>
-            <td data-label="Tipo de prenda">Sandalias</td>
-            <td data-label="Promedio descuento">50%</td>
-            <td data-label="Diferencia" style="color: green;">67,02% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Calzado</td>
-            <td data-label="Tipo de prenda">Zapatos</td>
-            <td data-label="Promedio descuento">50%</td>
-            <td data-label="Diferencia" style="color: green;">34,43% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Calzado</td>
-            <td data-label="Tipo de prenda">Tenis</td>
-            <td data-label="Promedio descuento">50%</td>
-            <td data-label="Diferencia" style="color: green;">34,08% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Accesorios</td>
-            <td data-label="Tipo de prenda">Accesorios</td>
-            <td data-label="Promedio descuento">$50%</td>
-            <td data-label="Diferencia" style="color: green;">132,93% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Ropa</td>
-            <td data-label="Tipo de prenda">Top</td>
-            <td data-label="Promedio descuento">50%</td>
-            <td data-label="Diferencia" style="color: green;">132,93% ↑</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <!-- Fin tabla descuento promedio -->
+    <app-informe-nuevos></app-informe-nuevos>   
 
     <br>
     <br>
+    <hr>
     <br>
 
-    <!-- tabla recien llegados -->
-    <div class="table-container">
-      <h2>Categorías con mayor cambio - Recien llegados</h2>
-      <p>Comparación mes a mes</p>
-      <table>
-        <thead>
-          <tr>
-            <th>Categoría</th>
-            <th>Subcategoría</th>
-            <th>Tipo de prenda</th>
-            <th>Los recién llegados</th>
-            <th>Diferencia</th>
-          </tr>
-        </thead>
-
-        <tbody>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Ropa</td>
-            <td data-label="Tipo de prenda">Pantalon</td>
-            <td data-label="Los recién llegados">65.722</td>
-            <td data-label="Diferencia" style="color: green;">88,69% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Ropa</td>
-            <td data-label="Tipo de prenda">Vestido</td>
-            <td data-label="Los recién llegados">1.048.929</td>
-            <td data-label="Diferencia" style="color: green;">66,50% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Ropa</td>
-            <td data-label="Tipo de prenda">Camisa</td>
-            <td data-label="Los recién llegados">116.939</td>
-            <td data-label="Diferencia" style="color: green;">46,94% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Calzado</td>
-            <td data-label="Tipo de prenda">Sandalias</td>
-            <td data-label="Los recién llegados">1.316.074</td>
-            <td data-label="Diferencia" style="color: green;">67,02% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Calzado</td>
-            <td data-label="Tipo de prenda">Zapatos</td>
-            <td data-label="Los recién llegados">92.419</td>
-            <td data-label="Diferencia" style="color: green;">34,43% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Calzado</td>
-            <td data-label="Tipo de prenda">Tenis</td>
-            <td data-label="Los recién llegados">281.374</td>
-            <td data-label="Diferencia" style="color: green;">34,08% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Accesorios</td>
-            <td data-label="Tipo de prenda">Accesorios</td>
-            <td data-label="Los recién llegados">7.006</td>
-            <td data-label="Diferencia" style="color: green;">132,93% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Ropa</td>
-            <td data-label="Tipo de prenda">Top</td>
-            <td data-label="Los recién llegados">18.547</td>
-            <td data-label="Diferencia" style="color: green;">132,93% ↑</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <!-- Fin tabla recien llegados -->    
+    <app-informe-descontinuados></app-informe-descontinuados>
 
     <br>
     <br>
+    <hr>
     <br>
 
-    <!-- tabla descontinuados -->
-    <div class="table-container">
-      <h2>Categorías con mayor cambio - Descontinuados</h2>
-      <p>Comparación mes a mes</p>
-      <table>
-        <thead>
-          <tr>
-            <th>Categoría</th>
-            <th>Subcategoría</th>
-            <th>Tipo de prenda</th>
-            <th>Cantidad descontinuados</th>
-            <th>Diferencia</th>
-          </tr>
-        </thead>
-
-        <tbody>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Ropa</td>
-            <td data-label="Tipo de prenda">Pantalon</td>
-            <td data-label="Cantidad descontinuados">200</td>
-            <td data-label="Diferencia" style="color: green;">88,69% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Ropa</td>
-            <td data-label="Tipo de prenda">Vestido</td>
-            <td data-label="Cantidad descontinuados">300</td>
-            <td data-label="Diferencia" style="color: green;">66,50% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Ropa</td>
-            <td data-label="Tipo de prenda">Camisa</td>
-            <td data-label="Cantidad descontinuados">500</td>
-            <td data-label="Diferencia" style="color: green;">46,94% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Calzado</td>
-            <td data-label="Tipo de prenda">Sandalias</td>
-            <td data-label="Cantidad descontinuados">600</td>
-            <td data-label="Diferencia" style="color: green;">67,02% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Calzado</td>
-            <td data-label="Tipo de prenda">Zapatos</td>
-            <td data-label="Cantidad descontinuados">7000</td>
-            <td data-label="Diferencia" style="color: green;">34,43% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Calzado</td>
-            <td data-label="Tipo de prenda">Tenis</td>
-            <td data-label="Cantidad descontinuados">800</td>
-            <td data-label="Diferencia" style="color: green;">34,08% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Accesorios</td>
-            <td data-label="Tipo de prenda">Accesorios</td>
-            <td data-label="Cantidad descontinuados">900</td>
-            <td data-label="Diferencia" style="color: green;">132,93% ↑</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Mujeres</td>
-            <td data-label="Subcategoría">Ropa</td>
-            <td data-label="Tipo de prenda">Top</td>
-            <td data-label="Cantidad descontinuados">700</td>
-            <td data-label="Diferencia" style="color: green;">132,93% ↑</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <!-- Fin tabla descontinuados -->
+   <app-informe-sku></app-informe-sku>       
 
     <br>
     <br>
-    <br>
-
-    <!-- tabla SKU -->
-    <div class="table-container-sku">
-      <h2>Resumen mes SKU</h2>
-      <table class="w">
-        <thead>
-          <tr>
-            <th>Categoría</th>
-            <th>Subcategoría</th>
-            <th>Tipo de prenda</th>
-            <th>SKU</th>
-            <th>Precio promedio</th>
-            <th>Nueva llegada</th>
-            <th>Tasa de frescura</th>
-            <th>Descuento promedio</th>
-          </tr>
-        </thead>
-
-        <tbody>
-          <tr>
-            <td data-label="Categoría">Todo</td>
-            <td data-label="Subcategoría">Vestir</td>
-            <td data-label="Tipo de prenda">Todo</td>
-            <td data-label="SKU">124m</td>
-            <td data-label="Precio promedio">$55.50</td>
-            <td data-label="Nueva llegada">El 14.97m</td>
-            <td data-label="Tasa de frescura">12.07%</td>
-            <td data-label="Descuento promedio" style="color: green;">88,69%</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Todo</td>
-            <td data-label="Subcategoría">Calzado</td>
-            <td data-label="Tipo de prenda">Todo</td>
-            <td data-label="SKU">Los 30.61m</td>
-            <td data-label="Precio promedio">$82.00</td>
-            <td data-label="Nueva llegada">Los 4.27m</td>
-            <td data-label="Tasa de frescura">13.97%</td>
-            <td data-label="Descuento promedio" style="color: green;">88,69%</td>
-          </tr>
-          <tr>
-            <td data-label="Categoría">Todo</td>
-            <td data-label="Subcategoría">Interior</td>
-            <td data-label="Tipo de prenda">Todo</td>
-            <td data-label="SKU">El 14.51m</td>
-            <td data-label="Precio promedio">$35.50</td>
-            <td data-label="Nueva llegada">1.98m</td>
-            <td data-label="Tasa de frescura">13.70%</td>
-            <td data-label="Descuento promedio" style="color: green;">88,69%</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <!-- Fin tabla SKU -->         
-
-    <br>
-    <br>
+    <hr>
     <br>
 
     <!-- tabla tipo de prenda -->
